--- a/mysite/views/guestbook/deleteform.ejs
+++ b/mysite/views/guestbook/deleteform.ejs
@@ -7,38 +7,20 @@
 </head>
 <body>
 	<div id="container">
-		<div id="header">
-			<h1>MySite</h1>
-			<ul>
-				<li><a href="">로그인</a><li>
-				<li><a href="">회원가입</a><li>
-				<li><a href="">회원정보수정</a><li>
-				<li><a href="">로그아웃</a><li>
-				<li>님 안녕하세요 ^^;</li>
-			</ul>
-		</div>
+		<%-include('../includes/header')%>
 		<div id="content">
 			<div id="guestbook" class="delete-form">
-				<form method="post" action="/guestbook">
-					<input type="hidden" name="a" value="delete">
-					<input type='hidden' name="no" value="">
+				<form method="post" action="/guestbook/delete">
+					<input type='hidden' name="no" value="<%=req.params.no %>">
 					<label>비밀번호</label>
 					<input type="password" name="password">
 					<input type="submit" value="확인">
 				</form>
-				<a href="">방명록 리스트</a>
+				<a href="/guestbook">방명록 리스트</a>
 			</div>
 		</div>
-		<div id="navigation">
-			<ul>
-				<li><a href="">안대혁</a></li>
-				<li><a href="">방명록</a></li>
-				<li><a href="">게시판</a></li>
-			</ul>
-		</div>
-		<div id="footer">
-			<p>(c)opyright 2015, 2016, 2017, 2018</p>
-		</div>
+		<%-include('../includes/navigation') %>
+		<%-include('../includes/footer') %>
 	</div>
 </body>
 </html>
